# DSN

./: .gitignore  LICENSE  README.md  mypy.ini  setup.cfg
.github/workflows/: ci.yml
src/dsn/: __init__.py  core.py  core.pyi  expr.py
src/dsn/expressers/: __init__.py  base_expr.py  ftp_expr.py  http_expr.py  mariadb_expr.py  mysql_expr.py  sqlite_expr.py
tests/: test_FTPExpression.py  test_HTTPExpression.py  test_Instantiate.py  test_MariaDBExpression.py  test_MySQLExpression.py  test_Parse.py  test_SQLiteExpression.py  test_URLRepresentation.py  test_UnsupportedExpression.py
