#
# setup configurations
#

[metadata]
name=dsn
version=0.1.0
description=DSN utility
long_description=DSN (Data Source Name) utility library.
license_file="LICENSE"
author=Enchan1207
author_email=enchant0130@gmail.com
url=https://github.com/Enchan1207/python-dsn
include_package_data=True

[options]
package_dir=
    =src
packages=find:

install_requires =

[options.packages.find]
where=src
