#
# setup configurations
#

[metadata]
name=dsn
version=0.1.1
description=DSN utility
long_description=DSN (Data Source Name) utility library.
license_file=LICENSE
license=MIT
author=Enchan1207
author_email=enchant0130@gmail.com
url=https://github.com/Enchan1207/python-dsn
include_package_data=True

[options]
package_dir=
    =src
packages=find:

install_requires =

[options.package_data]
dsn=py.typed, *.pyi

[options.packages.find]
where=src
